namespace CampaignSystem.DTOs;

public class SegmentDto
{
    public int Id { get; set; }

    public string SegmentCode { get; set; } = null!;

    public string SegmentName { get; set; } = null!;
}
