erDiagram

    CUSTOMER {
        int Id PK
        string CustomerNumber
        string Gender
        int SegmentId FK
        boolean IsActive
    }

    SEGMENT {
        int Id PK
        string SegmentCode
        string SegmentName
    }

    CARD {
        int Id PK
        int CustomerId FK
        int ProductId FK
        string CardType
        boolean IsActive
    }

    PRODUCT {
        int Id PK
        string ProductCode
        string ProductName
        boolean IsActive
    }

    MERCHANT {
        int Id PK
        string MerchantNumber
        string MerchantName
        string MCC
        boolean IsActive
    }

    TRANSACTION_CODE {
        int Id PK
        string Code
        string Name
        boolean IsActive
    }

    CAMPAIGN {
        int Id PK
        string Name
        string Description
        string CampaignType
        datetime StartDate
        datetime EndDate
        decimal MinimumAmount
        decimal MaximumAmount
        int MinimumTransactionCount
        decimal RewardPoint
        string EarningType
        int MaxRewardCount
        string Level
        string Status
        boolean IsActive
    }

    CAMPAIGN_SEGMENT {
        int CampaignId PK,FK
        int SegmentId PK,FK
    }

    CAMPAIGN_PRODUCT {
        int CampaignId PK,FK
        int ProductId PK,FK
    }

    CAMPAIGN_MERCHANT {
        int CampaignId PK,FK
        int MerchantId PK,FK
    }

    CAMPAIGN_TRANSACTION_CODE {
        int CampaignId PK,FK
        int TransactionCodeId PK,FK
    }

    CAMPAIGN_PARTICIPATION {
        int Id PK
        int CustomerId FK
        int CampaignId FK
        datetime ParticipationDate
        string Status
    }

    TRANSACTION {
        bigint Id PK
        string Rrn UK
        int CardId FK
        int CustomerId FK
        int MerchantId FK
        int TransactionCodeId FK
        datetime TransactionDate
        decimal Amount
        boolean IsReversed
    }

    CAMPAIGN_REWARD {
        bigint Id PK
        int CampaignId FK
        int CustomerId FK
        int CardId FK
        decimal RewardPoint
        int QualifyingTransactionCount
        string Status
        datetime RewardDate
    }

    CAMPAIGN_PROGRESS {
        int Id PK
        int CampaignId FK
        int CustomerId FK
        int CardId FK
        int TransactionCount
        decimal TotalAmount
        datetime LastCalculatedDate
    }

    SEGMENT  ||--o{ CUSTOMER : contains
    CUSTOMER ||--o{ CARD     : owns
    PRODUCT  ||--o{ CARD     : defines

    CAMPAIGN ||--o{ CAMPAIGN_SEGMENT : targets
    SEGMENT  ||--o{ CAMPAIGN_SEGMENT : included_in

    CAMPAIGN ||--o{ CAMPAIGN_PRODUCT : includes
    PRODUCT  ||--o{ CAMPAIGN_PRODUCT : included_in

    CAMPAIGN ||--o{ CAMPAIGN_MERCHANT : includes
    MERCHANT ||--o{ CAMPAIGN_MERCHANT : included_in

    CAMPAIGN         ||--o{ CAMPAIGN_TRANSACTION_CODE : allows
    TRANSACTION_CODE ||--o{ CAMPAIGN_TRANSACTION_CODE : included_in

    CUSTOMER ||--o{ CAMPAIGN_PARTICIPATION : participates
    CAMPAIGN ||--o{ CAMPAIGN_PARTICIPATION : has

    CARD             ||--o{ TRANSACTION : makes
    CUSTOMER         ||--o{ TRANSACTION : makes
    MERCHANT         ||--o{ TRANSACTION : accepts
    TRANSACTION_CODE ||--o{ TRANSACTION : types

    CUSTOMER ||--o{ CAMPAIGN_REWARD : receives
    CAMPAIGN ||--o{ CAMPAIGN_REWARD : generates
    CARD     ||--o{ CAMPAIGN_REWARD : earns

    CAMPAIGN ||--o{ CAMPAIGN_PROGRESS : tracks
    CUSTOMER ||--o{ CAMPAIGN_PROGRESS : progresses
    CARD     ||--o{ CAMPAIGN_PROGRESS : progresses
